# pygus

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: codeql-analysis.yml  lint_and_test.yml
docs/source/: conf.py  index.rst
examples/: README.md
pygus/: __init__.py
tests/: test_pygus.py
