[tool.poetry]
name = "pygus"
version = "0.1.0"
description = "Python wrapper for GUS API"
authors = ["Michal Dyzma <mdyzma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
vcrpy = "^4.1.1"
requests-oauthlib = "^1.3.0"
twine = "^3.4.2"
pytest-cov = "^2.12.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
Sphinx = "^5.1.0"
flake8 = "^3.9.0"
pylint = "^2.9.6"
black = "^21.7b0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools >= 40.9.0",
    "wheel",
]
build-backend = "poetry.core.masonry.api"